[tool.poetry]
name = "scalpel"
version = "0.1.0"
description = "Your easy-to-use and powerful web scraping library"
authors = ["lewoudar <lewoudar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
trio = "^0.13.0"
parsel = "^1.5.2"
attrs = "^19.3.0"
fake-useragent = "^0.1.11"
httpx = "^0.12.1"
selenium = "^3.141.0"
configuror = "^0.1.2"
gevent = {extras = ["recommended"], version = "^20.4.0"}
rfc3986 = {extras = ["idna"], version = "^1.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nox = "^2019.11.9"
flake8 = "^3.7.9"
bandit = "^1.6.2"
codecov = "^2.0.15"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
respx = "^0.10.1"
pytest-trio = "^0.5.2"
asyncmock = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
