[tool.poetry]
name = "pyscalpel"
version = "0.2.0"
description = "Your easy-to-use, fast and powerful web scraping library"
authors = ["lewoudar <lewoudar@gmail.com>"]
readme = "README.md"
keywords = ["trio", "gevent", "webscraping", "crawler", "asyncio"]

homepage = "https://scalpel.readthedocs.io/en/stable"
repository = "https://github.com/lewoudar/scalpel"
documentation = "https://scalpel.readthedocs.io/en/stable"

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Framework :: Trio",
    "Framework :: AsyncIO",
    "Framework :: Robot Framework :: Tool",
]

packages = [
    { include = "scalpel" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lewoudar/scalpel/issues"

[tool.poetry.dependencies]
python = "^3.7"
parsel = "^1.5.2"
attrs = "^19.3.0"
fake-useragent = "^0.1.11"
selenium = "^3.141.0"
configuror = "^0.2.0"
rfc3986 = { extras = ["idna"], version = "^1.4.0" }
msgpack = "^1.0.0"
gevent = { version = "^20.9.0", optional = true }
trio = { version = "^0.17.0", optional = true }
httpx = "^0.23.0"
anyio = "^3.0.0"

[tool.poetry.extras]
gevent = ["gevent"]
trio = ["trio"]
full = ["gevent", "trio"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nox = "^2019.11.9"
flake8 = "^3.7.9"
bandit = "^1.6.2"
codecov = "^2.0.15"
pytest-mock = "^2.0.0"
coverage = "^5.1"
mock = "^4.0.3"
mkdocs-material = "^7.0.5"
mkdocs = "^1.1.2"
mkautodoc = "^0.1.0"
respx = "^0.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
